--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <h1>hello word</h1>
     <p>first training</p>
-    <div></div>
+    <div class="head"></div>
+    <div class="head"></div>
+    <div class="head"></div>
+    <div class="head"></div>
+    <div class="head"></div>
     
 </body>
 </html>
