--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>hello word</h1>
     <p>first training</p>
+    <h2>My Name is Mahdi Mohammadi</h2>
     <div class="head"></div>
     <div class="head"></div>
     <div class="head"></div>
